社综--社区车辆图表及下面的摄像头车辆识别更改

--- a/Lingang.City.Brain/View/SocietyNew/Left_First_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_First_02.html
@@ -22,9 +22,9 @@
             <li class="sxt-li sxt-li6" id="sqzz-sxt3">
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
-                    <div class=""><span>人员：</span><em class="testAerial" id="total_person">155</em></div>
-                    <div class=""><span>正常：</span><em class="testAerial" id="normal_person">155</em></div>
-                    <div class=""><span>可疑人员：</span><em class="testAerial" id="doubtable_person">0</em></div>
+                    <div class=""><span>总人数：</span><em class="testAerial" id="total_person">155</em></div>
+                    <div class=""><span>进地铁：</span><em class="testAerial" id="normal_person">155</em></div>
+                    <div class=""><span>出地铁：</span><em class="testAerial" id="doubtable_person">0</em></div>
                 </div>
             </li>
         </ul>
