--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -3820,6 +3820,39 @@ dd.pjc-statistic-star >form{
 	margin-left: 0;
 }
 
+.sxtcar-identify{
+	flex-grow: 2;
+	font-size: .25rem;
+	padding-top: .2rem;
+	margin-left: .2rem;
+}
+.sxtcar-identify-pic{
+	float: left;
+	width: 2.2rem;
+	height: 1.3rem;
+	padding:.05rem;
+	margin-right: .1rem;
+	background: rgba(0,117,248,.3);
+	border-radius: .05rem;
+	box-sizing: border-box;
+}
+.sxtcar-identify-pic>img{
+	float: left;
+	width: 100%;
+	height: 100%;
+}
+.sxtcar-identify-text{
+	float: left;
+	width: calc(100% - 2.3rem);
+	padding-top: .18rem;
+}
+.sxtcar-identify-text>div>span{
+	font-size: .34rem;
+	color: #37a1f7;
+}
+
+
+
 
 
 @media screen and (max-width: 11520px){
