--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
@@ -11,7 +11,20 @@
                     <div class=""><span>故障：</span><em class="testAerial">1</em></div>
                 </div>
             </li>
-            <li class="sxt-li sxt-li5" id="iot-sxt2">
+          <li class="sxtcar-identify flex">
+            <div class="sxtcar-identify-pic">
+              <img src="Content/images/pic-car.png"></img>
+            </div>
+            <div class="sxtcar-identify-text">
+              <div>
+                车牌号：<span class="testAerial">沪A00544</span>
+              </div>
+              <div>
+                识别时间：<span class="testAerial">02/03 11:20:10</span>
+              </div>
+            </div>
+          </li>
+          <!--<li class="sxt-li sxt-li5" id="iot-sxt2">
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
                     <div class=""><span>车辆：</span><em class="testAerial">83</em></div>
@@ -26,7 +39,7 @@
                     <div class=""><span>正常：</span><em class="testAerial">276</em></div>
                     <div class=""><span>可疑人员：</span><em class="testAerial">0</em></div>
                 </div>
-            </li>
+            </li>-->
         </ul>
     </div>
 </div>
