--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
@@ -17,29 +17,16 @@
             </div>
             <div class="sxtcar-identify-text">
               <div>
-                车牌号：<span class="testAerial">沪A00544</span>
+                <em>车牌号：</em>
+                <span class="testAerial">沪A00544</span>
               </div>
               <div>
-                识别时间：<span class="testAerial">02/03 11:20:10</span>
+                <em>识别时间：</em>
+                <span class="testAerial">02/03 11:20:10</span>
               </div>
             </div>
+            <button class="sxtcar-identify-zoomin"  onclick="require('s_Echart').loadCenterCarIdentify();"></button>
           </li>
-          <!--<li class="sxt-li sxt-li5" id="iot-sxt2">
-                <div class="sxt-circlediv flex"></div>
-                <div class="sxt-circleinfo">
-                    <div class=""><span>车辆：</span><em class="testAerial">83</em></div>
-                    <div class=""><span>正常：</span><em class="testAerial">80</em></div>
-                    <div class=""><span>违规：</span><em class="testAerial">3</em></div>
-                </div>
-            </li>
-            <li class="sxt-li sxt-li6" id="iot-sxt3">
-                <div class="sxt-circlediv flex"></div>
-                <div class="sxt-circleinfo">
-                    <div class=""><span>人员：</span><em class="testAerial">276</em></div>
-                    <div class=""><span>正常：</span><em class="testAerial">276</em></div>
-                    <div class=""><span>可疑人员：</span><em class="testAerial">0</em></div>
-                </div>
-            </li>-->
         </ul>
     </div>
 </div>
