--- a/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
+++ b/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
@@ -66,6 +66,7 @@
 <div id="center_02" style="z-index:999;"></div>
 <div id="center_03" style="z-index:999;"></div>
 <div id="center_04" style="z-index:999;"></div>
+<div id="center_05" style="z-index:999;"></div>
 
 <!--------------------------------------------------------详情-------------------------------------------->
 <div id="detail_01" style="z-index:999;display:none;"></div>
