中间放大部分切换更新

--- a/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
@@ -19,7 +19,7 @@
             <button type="button">待受理: <span class="testAerial">5</span></button>
             <button type="button"> 待督查: <span class="testAerial">5</span></button>
           </div>
-          <button type="button" class="center-eventlist-btn" onclick="require('s_Echart').loadCenterEventList(); require('s_Echart').closeBigChart();">
+          <button type="button" class="center-eventlist-btn" onclick="require('s_Echart').loadCenterEventList();">
             <img src="Content/images/zoomin.png" style="width:.6rem;" />
           </button>
         </div>
