img 添加关闭标签

--- a/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetail.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetail.html
@@ -8,8 +8,8 @@
         <div id="ul_eventdetail">
             <ul>
                 <li><div>接警时间：</div><span>018-02-02 11:20:10</span></li>
-                <li><div><img src="Content/images/sqzz-poi-icon1.png">地址：</div><span>临港家园海事小区  2幢 302</span></li>
-                <li><div><img src="Content/images/sqzz-poi-icon2.png">事件描述：</div><span>烟感器因为短路停止运行，需相关人员及时到位处理</span></li>
+                <li><div><img src="Content/images/sqzz-poi-icon1.png"/>地址：</div><span>临港家园海事小区  2幢 302</span></li>
+                <li><div><img src="Content/images/sqzz-poi-icon2.png"/>事件描述：</div><span>烟感器因为短路停止运行，需相关人员及时到位处理</span></li>
             </ul>
         </div>
         <div class="sqzz-sj-video">
@@ -20,4 +20,5 @@
             </video>-->
         </div>
     </div>
+</div>
 
