--- a/Lingang.City.Brain/View/SocietyNew/Bottom_EventPaidan.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_EventPaidan.html
@@ -4,7 +4,7 @@
     </div>
     <div class="boxcont" id="ul_paidan">
         <div class="sqzz-sjjd-div flex">
-            <img src="Content/images/yangyufeng.jpg" style="width: 112px; height: 150px;">
+            <img src="Content/images/yangyufeng.jpg" style="width: 112px; height: 150px;" />
             <ul class="sqzz-sjjd-list1">
                 <li><span>接单员：</span><em>杨育峰</em></li>
                 <li><span>性别：</span><em>男</em></li>
