--- a/Lingang.City.Brain/View/TourNew/Center_EventDetail.html
+++ b/Lingang.City.Brain/View/TourNew/Center_EventDetail.html
@@ -3,7 +3,7 @@
         事件005
         <button type="button" class="box-close" onclick="require('t_Home').closeEventDetail()"></button>
     </div>
-    <div class="boxcont">
+    <div class="boxcont clearfix">
         <div class="box-leftpic" style="text-align:center;">
             <img src="Content/images/20190320-1b77e4e7-0a580a000f62-00000008-000090d4.jpg" />
         </div>
@@ -18,4 +18,3 @@
         </div>
     </div>
 </div>
-
