--- a/Lingang.City.Brain/View/Industry/Garden/UnmannedCarDetail.html
+++ b/Lingang.City.Brain/View/Industry/Garden/UnmannedCarDetail.html
@@ -4,7 +4,7 @@
     <div class="boxcont">
         <!--<button class="box-close" onclick="require('g_Home').closeBuildingDetail();"></button>-->
         <div class="sqzz-sjjd-div flex">
-            <img src="Content/images/personCardIMG.png" id="personIMG" style="width: 1.4rem; height: 1.7rem; margin-right: .2rem;">
+            <img src="Content/images/personCardIMG.png" id="personIMG" style="width: 1.4rem; height: 1.7rem; margin-right: .2rem;" />
             <ul class="sqzz-sjjd-list1" style="width:calc(100% - 1.6rem); line-height:.58rem;">
                 <li><span>上车时间：</span><em id="onboardTime">09:20:00</em></li>
                 <li><span>目的地：</span><em id="dest">五号楼</em></li>
