--- a/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetailPic.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetailPic.html
@@ -4,10 +4,10 @@
         <button type="button" class="box-close" onclick="require('s_Home').closeDetail();"></button>
     </div>
     <div class="boxcont flex" id="eventdetail">
-        <div class="box-leftpic fl" style="text-align:center;">
-            <img src="Content/images/20190320-1b77e4e7-0a580a000f62-00000008-000090d4.jpg" style="width:3rem;" />
+        <div class="box-leftpic" style="text-align:center;">
+            <img src="Content/images/20190320-1b77e4e7-0a580a000f62-00000008-000090d4.jpg" />
         </div>
-        <div class="box-rightinfo fl scrolldiv" style="margin-top:.2rem; font-size:.35rem; line-height:.7rem;">
+        <div class="box-rightinfo" style="margin-top:.2rem; font-size:.35rem; line-height:.7rem;">
             <ul>
                 <li><span>事件时间：</span><em>2019-03-20 23:10:48</em></li>
                 <li><span>事件地点：</span><em>临港大道两港大道以东200米</em></li>
