--- a/Lingang.City.Brain/View/SocietyNew/Bottom_IOTDetail.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_IOTDetail.html
@@ -1,9 +1,9 @@
-﻿<div class="poiinfo" id="div_iotdetail" style="z-index:999; position:absolute; left:55%; top:20%; ">
+﻿<div class="poiinfo" id="div_iotdetail" style="z-index:999; position:absolute; min-width:2rem; left:55%; top:20%; ">
     <div class="box-top">
         <span id="iothead">事件005</span>
         <button type="button" class="box-close" onclick="require('s_Home').closeIOTDetail();"></button>
     </div>
-    <div class="boxcont clearfix" id="iotdetail">
+    <div class="boxcont clearfix" id="iotdetail" style="padding:.1rem .4rem;">
         <div class="box-rightinfo fl" style="margin-top:.2rem; font-size:.35rem; line-height:.7rem;">
             <!--<ul>
                 <li><span>事件时间：</span><em>2019-03-20 23:10:48</em></li>
