社区车辆图表5min刷新一次更新

--- a/Lingang.City.Brain/View/Industry/Estate/Center_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Center_01.html
@@ -3,7 +3,7 @@
 
 
 <div class="statistic-box twocol society-center1" style="z-index:999;display:block;">
-    <button class="statistic-slidebtn"><img src="Content/images/statistic-arrow.png"></button>
+    <button class="statistic-slidebtn"><img src="Content/images/statistic-arrow.png"/></button>
     <div class="statistic-slidediv">
         <div class="pjc-statistic  short-statistic" style="z-index:999;display:block;">
             <dl>
@@ -18,7 +18,6 @@
             </dl>
         </div> 
     </div>
-</div>
 
 <script>
     $(function () {
@@ -36,3 +35,4 @@
     })
 
 </script>
+</div>
