--- a/Lingang.City.Brain/View/SocietyNew/Bottom_EventBuildList.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_EventBuildList.html
@@ -3,7 +3,7 @@
     <div class="boxcont">
         <ul class="poibox4-list scrolldiv">
             <li class="poibox4-li" onclick="require('sl_Event').loadBuildTravel();">
-                <div class="poibox4-left"><img src="Content/images/person-pic.png"></div>
+                <div class="poibox4-left"><img src="Content/images/person-pic.png"/></div>
                 <div class="poibox4-right">
                     <div><span>人口类型：</span><em>外来人口</em></div>
                     <div><span>进门时间：</span><em>2019-02-02 12:20:20</em></div>
@@ -11,7 +11,7 @@
                 </div>
             </li>
             <li class="poibox4-li" onclick="require('sl_Event').loadBuildTravel();">
-                <div class="poibox4-left"><img src="Content/images/person-pic.png"></div>
+                <div class="poibox4-left"><img src="Content/images/person-pic.png"/></div>
                 <div class="poibox4-right">
                     <div><span>人口类型：</span><em>外来人口</em></div>
                     <div><span>进门时间：</span><em>2019-02-02 12:20:20</em></div>
@@ -19,7 +19,7 @@
                 </div>
             </li>
             <li class="poibox4-li" onclick="require('sl_Event').loadBuildTravel();">
-                <div class="poibox4-left"><img src="Content/images/person-pic.png"></div>
+                <div class="poibox4-left"><img src="Content/images/person-pic.png"/></div>
                 <div class="poibox4-right">
                     <div><span>人口类型：</span><em>外来人口</em></div>
                     <div><span>进门时间：</span><em>2019-02-02 12:20:20</em></div>
@@ -27,7 +27,7 @@
                 </div>
             </li>
             <li class="poibox4-li" onclick="require('sl_Event').loadBuildTravel();">
-                <div class="poibox4-left"><img src="Content/images/person-pic.png"></div>
+                <div class="poibox4-left"><img src="Content/images/person-pic.png"/></div>
                 <div class="poibox4-right">
                     <div><span>人口类型：</span><em>外来人口</em></div>
                     <div><span>进门时间：</span><em>2019-02-02 12:20:20</em></div>
@@ -35,7 +35,7 @@
                 </div>
             </li>
             <li class="poibox4-li" onclick="require('sl_Event').loadBuildTravel();">
-                <div class="poibox4-left"><img src="Content/images/person-pic.png"></div>
+                <div class="poibox4-left"><img src="Content/images/person-pic.png"/></div>
                 <div class="poibox4-right">
                     <div><span>人口类型：</span><em>外来人口</em></div>
                     <div><span>进门时间：</span><em>2019-02-02 12:20:20</em></div>
@@ -43,7 +43,7 @@
                 </div>
             </li>
             <li class="poibox4-li" onclick="require('sl_Event').loadBuildTravel();">
-                <div class="poibox4-left"><img src="Content/images/person-pic.png"></div>
+                <div class="poibox4-left"><img src="Content/images/person-pic.png"/></div>
                 <div class="poibox4-right">
                     <div><span>人口类型：</span><em>外来人口</em></div>
                     <div><span>进门时间：</span><em>2019-02-02 12:20:20</em></div>
@@ -51,7 +51,7 @@
                 </div>
             </li>
             <li class="poibox4-li" onclick="require('sl_Event').loadBuildTravel();">
-                <div class="poibox4-left"><img src="Content/images/person-pic.png"></div>
+                <div class="poibox4-left"><img src="Content/images/person-pic.png"/></div>
                 <div class="poibox4-right">
                     <div><span>人口类型：</span><em>外来人口</em></div>
                     <div><span>进门时间：</span><em>2019-02-02 12:20:20</em></div>
