--- a/Lingang.City.Brain/View/SocietyNew/Center_05.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_05.html
@@ -5,7 +5,7 @@
   </div>
   <div class="sxtcar-identify sxtcar-identify-largebox">
     <div class="sxtcar-identify-pic">
-      <img src="Content/images/pic-car.png"></img>
+      <img src="Content/images/pic-car.png"/>
     </div>
     <div class="sxtcar-identify-text">
       <div>
