--- a/Lingang.City.Brain/View/Industry/Garden/Center_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Center_01.html
@@ -1,6 +1,6 @@
 ﻿<!-- 左侧 有两列时添加   twocol -->
 <div class="statistic-box twocol society-center1" style="z-index:999;display:block;">
-    <button class="statistic-slidebtn"><img src="Content/images/statistic-arrow.png"></button>
+    <button class="statistic-slidebtn"><img src="Content/images/statistic-arrow.png"/></button>
     <div class="statistic-slidediv">
         <div class="pjc-statistic" style="z-index:999;display:block;">
             <dl>
