--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventCamera.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventCamera.html
@@ -37,19 +37,19 @@
     <div class="divcont">
         <ul class="sqrk-ul flex">
             <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqrk_icon1.png"></div>
+                <div class="item-l"><img src="Content/images/sqrk_icon1.png"/></div>
                 <div class="item-r"><div class="item-r-name">实时总人数</div><div class="item-r-data testAerial">12594</div></div>
             </li>
             <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqrk_icon2.png"></div>
+                <div class="item-l"><img src="Content/images/sqrk_icon2.png"/></div>
                 <div class="item-r"><div class="item-r-name">访客人数</div><div class="item-r-data testAerial">5621</div></div>
             </li>
             <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqrk_icon3.png"></div>
+                <div class="item-l"><img src="Content/images/sqrk_icon3.png"/></div>
                 <div class="item-r"><div class="item-r-name">常住人数</div><div class="item-r-data testAerial">356</div></div>
             </li>
             <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqrk_icon3.png"></div>
+                <div class="item-l"><img src="Content/images/sqrk_icon3.png"/></div>
                 <div class="item-r"><div class="item-r-name">当天进出人数</div><div class="item-r-data testAerial">356</div></div>
             </li>
         </ul>
