- fix ui bug from xyf checking.

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventStreet2.html
@@ -1,6 +1,6 @@
 ﻿<!-- 无人机 -->
 <div id="left02_02" class="divbox divbox-lr society-ls-street2" style="top: 6.2rem;">
-    <h3><div>无人机</div></h3>
+    <h3><div>无人机（当月）</div></h3>
     <div class="divcont sqzz-wrj-lr1 flex">
         <ul class="sqrk-ul">
             <li class="sqrk-li">
