--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone1.html
@@ -1,6 +1,6 @@
 ﻿<!-- 无人机 -->
 <div id="left02_01" class="divbox divbox-lr society-ls-drone1" style="z-index:999;display:block;">
-    <h3><div>无人机</div></h3>
+    <h3><div>无人机（当月）</div></h3>
     <div class="divcont sqzz-wrj-lr1 flex">
         <ul class="sqrk-ul">
             <li class="sqrk-li">
