--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventGrid2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventGrid2.html
@@ -1,6 +1,6 @@
 ﻿ <!-- 处置案件类别（TOP3） -->
 <div id="left02_02" class="divbox divbox-lr sqzz-wg-lr2 society-ls-grid2" style="top:8.8rem;">
-    <h3><div>处置案件类别（TOP3）</div></h3>
+    <h3><div>处置案件类别（近一年）</div></h3>
     <div class="divcont sqzz-wgsj-lr2 flex" style="padding-top: 0;">
         <ul class="czajlb-ul flex" id="dealtasktype">
             <li class="czajlb-li">
