--- a/Lingang.City.Brain/View/SocietyNew/Left_First_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_First_02.html
@@ -23,8 +23,8 @@
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
                     <div class=""><span>总人数：</span><em class="testAerial" id="total_person">155</em></div>
-                    <div class=""><span>进地铁：</span><em class="testAerial" id="normal_person">155</em></div>
-                    <div class=""><span>出地铁：</span><em class="testAerial" id="doubtable_person">0</em></div>
+                    <div class=""><span>临港站：</span><em class="testAerial" id="normal_person">155</em></div>
+                    <div class=""><span>滴水湖站：</span><em class="testAerial" id="doubtable_person">0</em></div>
                 </div>
             </li>
         </ul>
