--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -3910,19 +3910,17 @@ dd.pjc-statistic-star >form{
 .eventProcess-div{
 	width: 100%;
 	height:1.2rem;
-	margin-top: 2em;
-	font-size: .2em;
+	margin-top: 1em;
+	font-size: .3em;
 }
 .eventProcess-ul{ height:100%;}
 .eventProcess-li{
 	position:relative;
 	float: left;
 	flex-grow: 1;
-	margin-right: 2em;
-	line-height: 2.3em;
+	line-height: 1.6em;
 	color: #9b9b9b;
-	background:linear-gradient(to left, currentcolor 3em, transparent 3em) 0 1em no-repeat;
-	background-size: 100% .1em;
+
 }
 .eventProcess-li:last-child{ 
 	width: 2rem; 
@@ -3933,10 +3931,10 @@ dd.pjc-statistic-star >form{
 	position: relative;
 	float: left;
 	margin-right: .5em;
-	width: 2em;
-	height: 2em;
+	width: 1.5em;
+	height: 1.5em;
 	text-align: center;
-	line-height: 2em;
+	line-height: 1.5em;
 	border:.1em solid currentcolor;
 	border-radius: 50%;
 }
@@ -3955,6 +3953,7 @@ dd.pjc-statistic-star >form{
 	left:0;
 	top:2.2em;
 	word-break:keep-all;
+	white-space:nowrap;
 }
 .eventProcess-li.active{ color: #18ccff;}
 .eventProcess-li.active>div{
