--- a/Lingang.City.Brain/View/TourNew/Center_EventDetail.html
+++ b/Lingang.City.Brain/View/TourNew/Center_EventDetail.html
@@ -1,4 +1,6 @@
-﻿<div class="poiinfo" id="ul_eventdetail" style="z-index:999; position:absolute; left:55%; top:20%;">
+﻿<div  id="ul_eventdetail" style="z-index:999; position:absolute; left:50%; top:50%; transform:translate(-50%, -50%); "></div>
+
+<!--<div class="poiinfo" id="ul_eventdetail" style="z-index:999; position:absolute; left:55%; top:20%;">
     <div class="box-top">
         事件005
         <button type="button" class="box-close" onclick="require('t_Home').closeEventDetail()"></button>
@@ -17,4 +19,4 @@
             </ul>
         </div>
     </div>
-</div>
+</div>-->
