js里html font-size注释

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT1.html
@@ -4,19 +4,19 @@
     <div class="divcont">
         <ul class="sqrk-ul flex" id="society-person">
             <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqrk_icon1.png"></div>
+                <div class="item-l"><img src="Content/images/sqrk_icon1.png"/></div>
                 <div class="item-r"><div class="item-r-name">总人数</div><div class="item-r-data testAerial">2,773</div></div>
             </li>
             <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqrk_icon2.png"></div>
+                <div class="item-l"><img src="Content/images/sqrk_icon2.png"/></div>
                 <div class="item-r"><div class="item-r-name">访客人数</div><div class="item-r-data testAerial">243</div></div>
             </li>
             <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqrk_icon3.png"></div>
+                <div class="item-l"><img src="Content/images/sqrk_icon3.png"/></div>
                 <div class="item-r"><div class="item-r-name">常住人数</div><div class="item-r-data testAerial">2,036</div></div>
             </li>
             <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqrk_icon3.png"></div>
+                <div class="item-l"><img src="Content/images/sqrk_icon3.png"/></div>
                 <div class="item-r"><div class="item-r-name">进出人数</div><div class="item-r-data testAerial">2,528</div></div>
             </li>
         </ul>
