--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventSeaBoard2.html
@@ -17,7 +17,7 @@
             <div class="sqzz-hax-lr2-pic"><div class="prism-player" id="monthlyRecentFlyVideo" style="height:100%;"></div></div></div>
         </div>
         <ul class="sqzz-hax-lr1-ul flex" id="recent-monthflight-mess">
-            <li class="sqzz-hax-lr1-li"><button><div>无人机数（架）</div><span class="testAerial">6</span></button></li>
+            <li class="sqzz-hax-lr1-li"><button><div>飞行时间</div><span class="testAerial">6</span></button></li>
             <li class="sqzz-hax-lr1-li"><button><div>游客劝离率</div><span class="testAerial">89%</span></button></li>
             <li class="sqzz-hax-lr1-li"><button><div>垃圾发现数</div><span class="testAerial">10</span></button></li>
             <li class="sqzz-hax-lr1-li"><button><div>乱设摊位数</div><span class="testAerial">0</span></button></li>
