天气预报更新

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone2.html
@@ -4,21 +4,21 @@
     <div class="divcont sqzz-wrj-lr2">
         <div class="sqzz-wrj-lr2-cont" id="drone_weather">
             <div class="sqzz-wrj-lr2-temp">周五（今天，实时：14℃）</div>
-            <div class="tablebox">
+            <div class="tablebox" id="drone_tablediv">
                 <table cellspacing="0" cellpadding="0" class="table sqzz-wrj-lr2-table">
                     <tbody>
                         <tr>
                             <td rowspan="2">
-                                <div class=""><img src="Content/images/sqzz-lr-21.png" style="width: 1.1rem"></div>
+                                <div class=""><img src="Content/images/sqzz-lr-21.png" style="width: 1.1rem"/></div>
                             </td>
                             <td>周六</td>
                             <td>周日</td>
                             <td>周一</td>
                         </tr>
                         <tr>
-                            <td><div class=""><img src="Content/images/sqzz-lr-22.png" style="width: .8rem"></div></td>
-                            <td><div class=""><img src="Content/images/sqzz-lr-22.png" style="width: .8rem"></div></td>
-                            <td><div class=""><img src="Content/images/sqzz-lr-22.png" style="width: .8rem"></div></td>
+                            <td><div class=""><img src="Content/images/sqzz-lr-22.png" style="width: .8rem"/></div></td>
+                            <td><div class=""><img src="Content/images/sqzz-lr-22.png" style="width: .8rem"/></div></td>
+                            <td><div class=""><img src="Content/images/sqzz-lr-22.png" style="width: .8rem"/></div></td>
                         </tr>
                         <tr>
                             <td style="font-size: .4rem;">15-7℃</td>
@@ -33,16 +33,16 @@
                             <td>11-6℃</td>
                         </tr>
                         <tr>
-                            <td>东北风<3级</td>
+                            <td>东北风3级</td>
                             <td>晴转多云</td>
                             <td>晴转多云</td>
                             <td>晴转多云</td>
                         </tr>
                         <tr>
                             <td>空气质量：94<span class="sqzz-wrj-lr2-air">良</span></td>
-                            <td>东北风<3级</td>
-                            <td>北风<3级</td>
-                            <td>东北风<3级</td>
+                            <td>东北风3级</td>
+                            <td>北风3级</td>
+                            <td>东北风3级</td>
                         </tr>
                     </tbody>
                 </table>
