处置主责部门图表top5更新

--- a/Lingang.City.Brain/View/SocietyNew/Left_First_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_First_02.html
@@ -3,7 +3,7 @@
     <h3><div>摄像头</div></h3>
     <div class="divcont">
         <ul class="flex sxt-ul">
-            <li class="sxt-li sxt-li4" id="sqzz-sxt1">
+            <li class="sxt-li sxt-li4 flexgrow1" id="sqzz-sxt1">
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
                     <div class=""><span>总数：</span><em class="testAerial" id="total_camera">638</em></div>
@@ -11,7 +11,7 @@
                     <div class=""><span>离线：</span><em class="testAerial" id="outline_camera">234</em></div>
                 </div>
             </li>
-            <li class="sxt-li sxt-li5" id="sqzz-sxt2">
+            <li class="sxt-li sxt-li5 flexgrow1" id="sqzz-sxt2">
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
                     <div class=""><span>总车辆：</span><em class="testAerial" id="total_car">39307</em></div>
@@ -19,14 +19,14 @@
                     <div class=""><span>出港：</span><em class="testAerial" id="total_illegalCar">18103</em></div>
                 </div>
             </li>
-            <li class="sxt-li sxt-li6" id="sqzz-sxt3">
+            <!--<li class="sxt-li sxt-li6" id="sqzz-sxt3">
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
                     <div class=""><span>总人数：</span><em class="testAerial" id="total_person">155</em></div>
                     <div class=""><span>临港站：</span><em class="testAerial" id="normal_person">155</em></div>
                     <div class=""><span>滴水湖站：</span><em class="testAerial" id="doubtable_person">0</em></div>
                 </div>
-            </li>
+            </li>-->
         </ul>
         <div class="sxt-videobox" style="height:2rem;">
             <ul class="sxt-videoul flex">
