左一列摄像头---删除“总人数，滴水湖站、临港大道”，UI重新编排。更新1

--- a/Lingang.City.Brain/View/SocietyNew/Left_First_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_First_02.html
@@ -2,7 +2,7 @@
 <div id="left01_02" class="divbox divbox-ll divbox-sxt2 society-lf2" style="z-index:999;display:block;top:6.8rem;">
     <h3><div>摄像头</div></h3>
     <div class="divcont">
-        <ul class="flex sxt-ul">
+        <ul class="flex sxt-ul" style="padding:0 .5rem; box-sizing:border-box;">
             <li class="sxt-li sxt-li4 flexgrow1" id="sqzz-sxt1">
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
