社综--无人机，社区人口，事件信息更新

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT1.html
@@ -3,19 +3,18 @@
     <h3><div>社区人口</div></h3>
     <div class="divcont">
         <ul class="sqrk-ul flex" id="society-person">
-            <li class="sqrk-li">
+            <li class="sqrk-li flexgrow1">
+              <div style="font-size:.5rem; color:#1a8fef">海洋小区</div>
+            </li>
+            <li class="sqrk-li flexgrow1">
                 <div class="item-l"><img src="Content/images/sqrk_icon1.png"/></div>
-                <div class="item-r"><div class="item-r-name">总人数</div><div class="item-r-data testAerial">2,773</div></div>
+                <div class="item-r"><div class="item-r-name">总人数</div><div class="item-r-data testAerial">243</div></div>
             </li>
-            <li class="sqrk-li">
-                <div class="item-l"><img src="Content/images/sqrk_icon2.png"/></div>
-                <div class="item-r"><div class="item-r-name">访客人数</div><div class="item-r-data testAerial">243</div></div>
-            </li>
-            <li class="sqrk-li">
+            <li class="sqrk-li flexgrow1">
                 <div class="item-l"><img src="Content/images/sqrk_icon3.png"/></div>
                 <div class="item-r"><div class="item-r-name">常住人数</div><div class="item-r-data testAerial">2,036</div></div>
             </li>
-            <li class="sqrk-li">
+            <li class="sqrk-li flexgrow1">
                 <div class="item-l"><img src="Content/images/sqrk_icon3.png"/></div>
                 <div class="item-r"><div class="item-r-name">进出人数</div><div class="item-r-data testAerial">2,528</div></div>
             </li>
