--- a/Lingang.City.Brain/View/SocietyNew/Right_Second_01.html
+++ b/Lingang.City.Brain/View/SocietyNew/Right_Second_01.html
@@ -2,7 +2,7 @@
 <div  id="right02_01" class="divbox divbox-rr clearfix society-rs1" style="z-index:999;display:block;">
     <h3><div>事件信息</div></h3>
     <div class="divcont divcont-sj">
-        <ul class="sj-list flex">
+        <!--<ul class="sj-list flex">
             <li class="sj-li">
                 <div class="sj-div"></div>
                 <div class="sj-title"><div>累计节省时间</div><span>（案件数量*节省分钟数）</span></div>
@@ -23,6 +23,54 @@
                 <div class="sj-title">智能派单准确率超过</div>
                 <div class="sj-data testAerial" id="sj-accuracyRate">80%</div>
             </li>
+        </ul>-->
+
+        <ul class="sj-list flex">
+          <li class="sj-li flexgrow1">
+            <div class="sj-div"></div>
+            <div class="sj-title">
+              <div>主动发现事件个数</div>
+              <span class="sj-data testAerial">43536</span>
+            </div>
+          </li>
+          <li class="sj-li flexgrow1">
+            <div class="sj-div"></div>
+            <div class="sj-title">
+              <div>主动发现率</div>
+              <span class="sj-data testAerial">43.43%</span>
+            </div>
+          </li>
+          <li class="sj-li flexgrow1">
+            <div class="sj-div"></div>
+            <div class="sj-title">
+              <div>主动发现节约时间</div>
+              <span class="sj-data testAerial">43212*34</span>
+            </div>
+          </li>
         </ul>
+        <ul class="sj-list flex">
+          <li class="sj-li flexgrow1">
+            <div class="sj-div"></div>
+            <div class="sj-title">
+              <div>智能派单事件个数</div>
+              <span class="sj-data testAerial">43536</span>
+            </div>
+          </li>
+          <li class="sj-li flexgrow1">
+            <div class="sj-div"></div>
+            <div class="sj-title">
+              <div>智能派单率</div>
+              <span class="sj-data testAerial">67.54%</span>
+            </div>
+          </li>
+          <li class="sj-li flexgrow1">
+            <div class="sj-div"></div>
+            <div class="sj-title">
+              <div>智能派单节约时间</div>
+              <span class="sj-data testAerial">23454*21</span>
+            </div>
+          </li>
+        </ul>
+
     </div>
 </div>
