--- a/Lingang.City.Brain/View/TourNew/Left_Second_03.html
+++ b/Lingang.City.Brain/View/TourNew/Left_Second_03.html
@@ -5,11 +5,15 @@
         <ul class="cgq-ul flex dkl-jtxxul">
             <li class="cgq-li">
                 <div class="item-l"></div>
-                <div class="item-r"><div class="item-r-name">进港车辆</div><div class="item-r-data testAerial" id="subway">61344</div></div>
+                <div class="item-r"><div class="item-r-name">进港车辆</div><div class="item-r-data testAerial" id="subway">6134</div></div>
             </li>
             <li class="cgq-li">
                 <div class="item-l"></div>
-                <div class="item-r"><div class="item-r-name">出港车辆</div><div class="item-r-data testAerial" id="car">71996</div></div>
+                <div class="item-r"><div class="item-r-name">出港车辆</div><div class="item-r-data testAerial" id="car">7196</div></div>
+            </li>
+            <li class="cgq-li">
+                <div class="item-l"></div>
+                <div class="item-r"><div class="item-r-name">地铁</div><div class="item-r-data testAerial" id="dt">672</div></div>
             </li>
             <li class="cgq-li">
                 <div class="item-l"></div>
